[FIX] web: Align arrow and title inside control panel on mobile devices
This commit is linked to task ID: 1893168

--- a/addons/web/static/src/scss/control_panel.scss
+++ b/addons/web/static/src/scss/control_panel.scss
@@ -12,7 +12,9 @@
 
         > li {
             @include o-text-overflow($max-width: 90%);
-
+            @include media-breakpoint-down(sm) {
+                padding-top: 3px;
+            }
             > a {
                 cursor: pointer;
             }
